--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -1,3 +1,31 @@
 // Place all the styles related to the Homepage controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.hero {
+    background-image: image-url('hero.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    height: 100vh;
+    .container {
+        position: relative;
+        margin-top: 50px;
+        h1 {
+            color: #fff;
+            font-weight: 400;
+            text-align: center;
+            margin-bottom: 25px;
+        }
+        .input {
+            width: 88%;
+            border: none;
+        }
+        max-width: 1000px;
+        .success {
+            position: absolute;
+            right: 30px;
+            top: 77px;
+            height: 37px;
+        }
+    }
+}
