--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,12 +1,12 @@
-<div data-role="appbar" data-expand-point="md" class="d-flex flex-justify-end">
-    <a href="#" class="brand no-hover place-left">
-        <h3 class="p-2">
-            Listings
-        </h3>
-    </a>
-
+<div data-role="appbar" data-expand-point="md" class="d-flex flex-justify-end bg-grayMouse">
+    <%= link_to "Listing", root_path, class: "fg-white brand no-hover place-left", style: "font-size: 28px"%>
     <ul class="app-bar-menu ml-auto mr-10">
-        <button class="button secondary mr-5"><span class="mif-chevron-right"></span>Login</button>
+      <% if !user_signed_in? %>
+        <%= button_to "Login", new_user_session_path, class: 'button bg-grayMouse fg-white mr-5 mif-chevron-right' %>
+      <% else %>
+        <%= button_to "Logout", destroy_user_session_path, class: 'button bg-grayMouse fg-lightRed mr-5 text-bold' %>
+        <%= button_to "Profile", edit_user_registration_path, class: 'button bg-grayMouse fg-white mr-5 mif-user' %>
+      <% end %>
         <div class="dropdown-button mr-5">
             <button class="button dropdown-toggle">EN</button>
             <ul class="d-menu" data-role="dropdown">
