RUB-8: Add create form annonce.

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,6 +13,6 @@
                 <li><a href="#">FR</a></li>
             </ul>
         </div>
-        <%= button_to "Create my Listing", list_path, class: 'button bg-green fg-white', method: :get %>
+        <%= button_to "Create my Listing", annonces_path, class: 'button bg-green fg-white', method: :get %>
     </ul>
 </div>
