--- a/app/views/annonces/show.html.erb
+++ b/app/views/annonces/show.html.erb
@@ -1,9 +1,15 @@
-<a href="/list/add">
+<a href="/annonces/new">
   <button class="fab-button action-button bg-grayMouse fg-white">
     <span class="icon"><span class="mif-plus"></span></span>
   </button>
 </a>
 <div class="list-root">
 <h1>Hello</h1>
-  <%= current_user.annonces %>
+  <ul>
+    <% for annonce in @annonces %>
+
+      <li><%= annonce[:name] %></li>
+      <img src="" alt="">
+    <% end %>
+  </ul>
 </div>
