--- a/app/assets/stylesheets/listings.scss
+++ b/app/assets/stylesheets/listings.scss
@@ -1,10 +1,10 @@
-// Place all the styles related to the annonce controller here.
+// Place all the styles related to the listing controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .list {
   &-root {
-    margin-top: 52px;
+    margin-top: 75px;
   }
 }
 
