Listing styling template

--- a/app/assets/stylesheets/listings.scss
+++ b/app/assets/stylesheets/listings.scss
@@ -6,6 +6,12 @@
   &-root {
     margin-top: 75px;
   }
+  &-title {
+    margin-bottom: 15px;
+  }
+  &-right {
+    width: 80%;
+  }
 }
 
 .fab-button {
