--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,28 +1,48 @@
-<a href="/listings/new">
-  <button class="fab-button action-button bg-grayMouse fg-white">
-    <span class="icon"><span class="mif-plus"></span></span>
-  </button>
-</a>
-<div class="list-root container">
-    <div>
-      <%# <% for listing in @listings %>
-        <%# <h3><%= listing[:name] </h3> %>
+<div>
 
-        <h3 class="list-title">Je suis une : annonce</h3>
-        <div>
-          <span class="fg-gray mr-2 text-secondary">2019-03-30 15h23</span>
-          <span class="border-radius-20 bg-grayMouse p-1 text-small fg-white">Musique</span>
-        </div>
-        <div class="d-flex pt-5">
-          <img class="mr-8 pb-10" src="https://via.placeholder.com/200" alt="">
-          <div class="list-right">
-            <p class="pb-10">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse eveniet, placeat eos recusandae quibusdam a provident officia cumque. Quis natus quo necessitatibus, quae error nisi hic non? Voluptas, excepturi sunt?Adipisci inventore, iste in nam soluta culpa fugiat modi aut ad, sint quae dolore harum eaque officiis nostrum sed incidunt saepe, nesciunt mollitia similique quibusdam amet aperiam. Enim, iure delectus.</p>
-            <span class="text-bold">€500.00</span>
-            
-        <%= button_to "Contact seller", listings_path, class: 'button bg-orange fg-white float-right', method: :get %>
+  <a href="/listings/new">
+    <button class="fab-button action-button bg-grayMouse fg-white">
+      <span class="icon"><span class="mif-plus"></span></span>
+    </button>
+  </a>
+  <div class="list">
+    <div class="list-root container">
+      <div>
+        <% for listing in @listings %>
+          <h3 class="list-title"><%= listing.name %></h3>
+          <div>
+            <span class="fg-gray mr-2 text-secondary"><%= listing.date.to_formatted_s(:long) %></span>
+            <% for tag in listing.tags %>
+              <span class="border-radius-20 bg-grayMouse p-1 text-small fg-white"><%= tag %></span>
+            <% end %>
           </div>
-        </div>
-      <%# <% end %>
-      <hr>
+          <div class="d-flex pt-5">
+            <%= image_tag("#{listing.photo.id}", alt: listing.name, class: "mr-8 pb-10 img-preview") %>
+            <div class="list-right">
+              <p class="pb-10"><%= listing.description.truncate(1300) %></p>
+              <span class="text-bold">€ <%= listing.price %> </span>
+              <button class="button bg-orange fg-white float-right" onclick="Metro.dialog.open('#contactSellerDialog')">Contact
+                Seller
+              </button>
+            </div>
+          </div>
+
+          <div id="contactSellerDialog" class="dialog no-border" data-role="dialog">
+            <div class="dialog-title bg-darkGrayBlue fg-white no-border">Contact Seller</div>
+            <div class="dialog-content bg-grayBlue no-margin no-border">
+              <%= form_tag listings_contact_url, method: 'post' do |f| %>
+                <input hidden name="target" value=<%= listing.name %>>
+                <input hidden name="article" value=<%= listing %>>
+                <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                </div>
+                <div class="dialog-actions bg-darkGrayBlue no-margin no-border">
+                  <input type="submit" value="send" class="button bg-orange js-dialog-close fg-white">
+                </div>
+              <% end %>
+              </div>
+        <% end %>
+        <hr>
+      </div>
     </div>
+  </div>
 </div>
