--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -17,12 +17,17 @@
             <% end %>
           </div>
           <div class="d-flex pt-5">
-            <%= image_tag("#{listing.photo.id}", alt: listing.name, class: "mr-8 pb-10 img-preview") %>
+
+            <%= image_tag("#{listing.photo.id}", alt: listing.name) %>
             <div class="list-right">
               <p class="pb-10"><%= listing.description.truncate(1300) %></p>
               <span class="text-bold">€ <%= listing.price %> </span>
-              <button class="button bg-orange fg-white float-right" onclick="Metro.dialog.open('#contactSellerDialog')">Contact
-                Seller
+              <div class="float-right">
+
+              </div>
+              <%= button_to 'Détails', listings_details_url(listing.id), method: 'get', class: 'button bg-blue fg-white' %>
+              <button class="button bg-orange fg-white " onclick="Metro.dialog.open('#contactSellerDialog')">Contact
+                seller
               </button>
             </div>
           </div>
